add readmo, parameterized tests and different markers

--- a/test/env_config/default_env.ini
+++ b/test/env_config/default_env.ini
@@ -1,14 +1,14 @@
 [local]
 url = http://localhost:8002
-# 浏览器chromium, firefox, webkit
+# chromium, firefox, webkit
 browser = chromium
 # headless, headful
-mode = headful
+mode = headless
 
 
-[ci]
-url = http://localhost:8002
-# 浏览器chromium, firefox, webkit
+[testing]
+url = https://konghq.com/
+# chromium, firefox, webkit
 browser = chromium
 # headless, headful
 mode = headless
